--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore build output directory
+build
+bin
+out
+
+# Ignore OS folder
+.DS_Store
+
+# Ignore IDE project
+.classpath
+.project
+.settings
+
 # Compiled class file
 *.class
 
@@ -21,3 +37,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
