--- a/build.gradle
+++ b/build.gradle
@@ -18,17 +18,13 @@ repositories {
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:28.0-jre'
-
-    // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-
-    // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+    api(platform("org.junit:junit-bom:5.7.0"))
+    api("org.junit.jupiter:junit-jupiter-api") {
+        because 'building extensions in "main" using JUnit Jupiter API'
+    }
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine") {
+        because 'at least one engine is needed at test runtime'
+    }
 }
 
 test {
